@@ -1,5 +1,6 @@
 $:.unshift File.dirname(__FILE__)
 
+require 'reek/name'
 require 'reek/code_context'
 require 'reek/object_refs'
 
@@ -10,12 +11,12 @@ module Reek
     attr_reader :num_statements, :depends_on_self
     attr_accessor :name
 
-    def initialize(outer, exp)
-      super
+    def initialize(outer, exp, record = true)
+      super(outer, exp)
       @parameters = []
       @local_variables = []
       @instance_variables = []
-      @name = exp[1].to_s
+      @name = Name.new(exp[1])
       @num_statements = 0
       @calls = Hash.new(0)
       @refs = ObjectRefs.new
@@ -27,7 +28,11 @@ module Reek
     end
 
     def has_parameter(sym)
-      parameters.include?(sym)
+      parameters.include?(sym.to_s)
+    end
+    
+    def constructor?
+      @name.to_s == 'initialize'
     end
     
     def record_call_to(exp)
@@ -39,15 +44,19 @@ module Reek
     end
 
     def record_instance_variable(sym)
-      @instance_variables << sym
+      @instance_variables << Name.new(sym)
     end
 
     def record_local_variable(sym)
-      @local_variables << sym
+      @local_variables << Name.new(sym)
     end
 
-    def record_parameter(sym)
-      @parameters << sym
+    def self.is_block_arg?(param)
+      Array === param and param[0] == :block
+    end
+
+    def record_parameter(param)
+      @parameters << Name.new(param) unless MethodContext.is_block_arg?(param)
     end
 
     def outer_name
@@ -59,7 +68,7 @@ module Reek
     end
 
     def envious_receivers
-      return [] if @name == 'initialize' or @refs.self_is_max?
+      return [] if constructor? or @refs.self_is_max?
       @refs.max_keys
     end
   end
