@@ -21,22 +21,12 @@ module Reek
       # and false otherwise.
       #
       def self.examine(ctx, report)
-        num_params = count_parameters(ctx.parameters)
+        num_params = ctx.parameters.length
         return false if num_params <= MAX_ALLOWED
         report << new(ctx, num_params)
       end
 
       MAX_ALLOWED = 3
-
-      def self.is_block_arg?(param)
-        Array === param and param[0] == :block
-      end
-
-      def self.count_parameters(params)
-        result = params.length
-        result -= 1 if is_block_arg?(params[-1])
-        result
-      end
       
       def initialize(context, num_params)
         super(context)
