@@ -17,7 +17,7 @@ module Reek
       # and false otherwise.
       #
       def self.examine(method, report)
-        return false if method.name == 'initialize' or
+        return false if method.constructor? or
           method.calls.keys.length == 0 or
           method.num_statements == 0 or
           method.depends_on_self
